@@ -294,7 +294,7 @@
 				<symbol>h</symbol>
 				<unit>m</unit>
 				<active>true</active>
-				<statistics ratioText="Verbrauchte Kapazität/Höhenmeter" ratioRefOrdinal="4" sumTriggerText="text_trigger_motor_sum" sumByTriggerRefOrdinal="2" sigma="false" avg="false" max="true" min="true"/>
+				<statistics ratioText="text_trigger_ratio_capacity_per_height" ratioRefOrdinal="4" sumTriggerText="text_trigger_motor_sum" sumByTriggerRefOrdinal="2" sigma="false" avg="false" max="true" min="true"/>
 				<property description="dm -&gt; m" type="Double" value="0.10" name="factor"/>
 				<property description="subtract first measurement value from all successors" type="Boolean" value="true" name="do_subtract_first"/>
 			</Measurement>
